--- a/style.css
+++ b/style.css
@@ -2,29 +2,51 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	font-family: Arial;
+	font-family: Muli;
 	letter-spacing: 1px;
-}
+		}
 #container{
-	width: fit-content;
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%);
-	padding: 2rem;
+	width: 100%;
+	height: fit-content;
 	border: 1px solid black;
 	text-align: center;
+	border-radius:10px ;
+	box-shadow: 2px 3px 4px 5px lightgray;
 }
-#canvas{
-	width: 400px;
-	height: 400px;
-	border: 1px solid black;
-	background-color: grey;
+#scoreboard{
+	font-size: 3rem;
+	text-align: center;
 }
-#button_container{
-	display: inline-block;
+#pausebtn{
+	margin-left: 90%;
+	margin-bottom: 0.7rem;
+	background: transparent;
+	border: none;
 }
-#button_container button{
-	padding:0.5rem;
-	margin: 0.5rem;
+.fas {
+	font-size: 2rem;
+	color: #2E42BF;
 }
+#btngroup{
+	text-align: center;
+}
+
+#btngroup button{
+	padding: 0.7rem;
+	font-size: 0.9rem;
+	width: 4rem;
+	height: 4rem;
+}
+span{
+	padding: 0.7rem;
+	width: 4rem;
+	height: 4rem;
+}
+#up{
+	margin-top: 2rem;
+}
+#down{
+	margin-bottom: 2rem;
+}
+
+	
